# slam-from-scratch

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  build.ps1  build.sh  bundle_cvlib.ps1  bundle_cvlib.sh  fetch_data.ps1  fetch_data.sh  run.ps1  run.sh
.claude/: settings.json
.claude/agents/: slam-engineer.md
.claude/skills/slam-mvo/: SKILL.md
.codex/: settings.json
.codex/agents/: slam-engineer.md
.codex/rules/: slam.md
.codex/skills/slam-mvo/: SKILL.md
configs/: kitti_image_sequence.json  kitti_stereo_sequence.json
configs/parameters/: bundle_adjustment.json  feature.json  initializer.json  loop_closure.json  mapping.json  pnp.json  stereo.json  visualization.json
docs/: accuracy-todo.md  cvlib-update-analysis.md  sim3-pgo-plan.md
include/: app.h  bundle_adjustment.h  config.h  constants.h  converter.h  feature.h  frame_source.h  init.h  loop_closure.h  map_data.h  parameters.h  pose_estimation.h  pose_graph.h  stereo.h  types.h  visualization.h
include/mvo/: app.h  bundle_adjustment.h  config.h  converter.h  feature.h  frame_source.h  init.h  loop_closure.h  map_data.h  parameters.h  pose_estimation.h  types.h  visualization.h
src/: app.cpp  bundle_adjustment.cpp  config.cpp  converter.cpp  cvlib_main.cpp  feature.cpp  frame_source.cpp  init.cpp  loop_closure.cpp  map_data.cpp  parameters.cpp  pose_estimation.cpp  pose_graph.cpp  stereo.cpp  visualization.cpp
